# NJLIGameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NJLI.pat  NJLIWallPaper.xcf  README.md  _CMakeLists.txt  _swig_njli_javascript.sh  _swig_njli_lua.sh  appstore.plist  build_new.sh  checkout_submodule.sh  cmake_android.sh  cmake_apple.sh  cmake_doc.sh  cmake_emscripten.sh  cmake_icons.sh  cmake_linux.sh  codesign.sh  copy_over_test.sh  dockcross-browser-asmjs  exportOptions.plist  jenkins.sh  launch-c.in  launch-cxx.in  njli-add.sh  njli-build-count.sh  njli-push.sh  njli-update-major.sh  njli-update-minor.sh  njli-update-release.sh  old_build.sh  opengl_es_2.xml  swig.sh  swig_bullet_lua.sh  swig_lua.sh  swig_njli.sh  swig_njli_javascript.sh  swig_njli_lua.sh  (+1 more)
SETTINGS/: appletv.txt  ios.txt  macOS.txt
cmake/: download-extract.cmake  njli-source-group.cmake  unity-build.cmake
cmake.in/: Doxyfile  Doxyfile.in  tagfile
cmake.in/Platform.in/: Engine.h.in
projects/: index.html  runIndex.sh  seperate_asm.sh
projects/COMMON/: Makefile  sublime_project.sublime-workspace
projects/ELIA/: Makefile
projects/ELIA.xcworkspace/: contents.xcworkspacedata
projects/ELIA_ios_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  postprocess_bundle.cmake
projects/ELIA_macOS_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  opengl_es_2.xml  postprocess_bundle.cmake
projects/ELIA_tvos_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  postprocess_bundle.cmake
projects/NJLIGameEngine.xcworkspace/: contents.xcworkspacedata
projects/YappyBirds.xcworkspace/: contents.xcworkspacedata
projects/YappyBirds_ios_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  postprocess_bundle.cmake
projects/YappyBirds_macOS_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  opengl_es_2.xml  postprocess_bundle.cmake
projects/YappyBirds_tvos_Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  postprocess_bundle.cmake
projects/android_AndroidStudio/: build.gradle  gradle.properties  settings.gradle
projects/emscripten_Xcode/: CMakeCache.txt  cmake_install.cmake
projects/ios_Unix/: CMakeCache.txt  Makefile  cmake_install.cmake
projects/macOS_Ninja/: CMakeCache.txt  cmake_install.cmake  rules.ninja
projects/macOS_Unix/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
projects/macOS_Xcode/: CMakeCache.txt  (+1 more)
tests/: CMakeLists.txt  Tests.m  UITest.m
(+941 files in other folders)
